--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
 asgiref==3.2.10
 Django==3.1.1
 gunicorn==20.0.4
+Pillow==8.1.2
+portalocker==2.2.1
 pytz==2020.1
+pywin32==300
 sqlparse==0.3.1
 unicorn==1.0.2
 whitenoise==5.2.0
