--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 asgiref==3.2.10
 Django==3.1.1
+django-filter==2.4.0
 gunicorn==20.0.4
 Pillow==8.1.2
-portalocker==2.2.1
 pytz==2020.1
 pywin32==300
 sqlparse==0.3.1
