--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,44 @@
-asgiref==3.2.10
-Django==3.1.1
-
-gunicorn==20.0.4
-Pillow==8.1.2
-pytz==2020.1
-sqlparse==0.3.1
- 
-whitenoise==5.2.0
+asgiref==3.4.1
+boto3==1.24.45
+botocore==1.27.45
+certifi==2022.6.15
+cffi==1.15.1
+charset-normalizer==2.1.0
+cryptography==36.0.2
+defusedxml==0.7.1
+distlib==0.3.4
+dj-database-url==1.0.0
+Django==3.2.10
+django-allauth==0.50.0
+django-bmemcached==0.3.0
+django-crispy-forms==1.13.0
+django-environ==0.9.0
+django-ses==3.1.0
+django-storages==1.12.3
+filelock==3.6.0
+gunicorn==20.1.0
+idna==3.3
+importlib-metadata==1.7.0
+jmespath==1.0.1
+oauthlib==3.2.0
+Pillow==8.4.0
+platformdirs==2.5.2
+psycopg2==2.9.3
+pycparser==2.21
+PyJWT==2.4.0
+python-binary-memcached==0.31.1
+python-dateutil==2.8.2
+python-decouple==3.6
+python3-openid==3.2.0
+pytz==2021.3
+requests==2.28.1
+requests-oauthlib==1.3.1
+s3transfer==0.6.0
+six==1.16.0
+sqlparse==0.4.2
+typing_extensions==4.0.1
+uhashring==2.2
+urllib3==1.26.11
+virtualenv==20.14.1
+whitenoise==6.0.0
+zipp==3.8.0
